--- a/meson.build
+++ b/meson.build
@@ -1,32 +1,10 @@
 project('ktx', 'c')
 
 ktx_sources = [
+	'src/grenade.c',
 	'src/admin.c',
 	'src/arena.c',
 #	'src/bg_lib.c',
-	'src/bot_aim.c',
-	'src/bot_blocked.c',
-	'src/bot_botenemy.c',
-	'src/bot_botgoals.c',
-	'src/bot_bothazd.c',
-	'src/bot_bothelp.c',
-	'src/bot_botimp.c',
-	'src/bot_botjump.c',
-	'src/bot_botpath.c',
-	'src/bot_botphys.c',
-	'src/bot_botstat.c',
-	'src/bot_botthink.c',
-	'src/bot_botwater.c',
-	'src/bot_botweap.c',
-	'src/bot_client.c',
-	'src/bot_commands.c',
-	'src/bot_items.c',
-	'src/bot_load.c',
-	'src/bot_loadmap.c',
-	'src/bot_match.c',
-	'src/bot_movement.c',
-	'src/bot_routing.c',
-	'src/bot_world.c',
 	'src/buttons.c',
 	'src/captain.c',
 	'src/clan_arena.c',
@@ -50,16 +28,12 @@ ktx_sources = [
 	'src/items.c',
 	'src/logs.c',
 	'src/maps.c',
-	'src/maps_map_amphi2.c',
-	'src/maps_map_dm3.c',
-	'src/maps_map_dm4.c',
-	'src/maps_map_dm6.c',
-	'src/maps_map_povdmm4.c',
 	'src/marker_load.c',
 	'src/marker_util.c',
 	'src/match.c',
 	'src/mathlib.c',
 	'src/misc.c',
+	'src/tforthlp.c',
 	'src/motd.c',
 	'src/native_lib.c',
 	'src/plats.c',
@@ -71,25 +45,8 @@ ktx_sources = [
 	'src/route_lookup.c',
 	'src/runes.c',
 	'src/server.c',
-	'src/sp_ai.c',
-	'src/sp_boss.c',
 	'src/sp_client.c',
-	'src/sp_demon.c',
-	'src/sp_dog.c',
 	'src/spectate.c',
-	'src/sp_enforcer.c',
-	'src/sp_fish.c',
-	'src/sp_hknight.c',
-	'src/sp_knight.c',
-	'src/sp_monsters.c',
-	'src/sp_ogre.c',
-	'src/sp_oldone.c',
-	'src/sp_shalrath.c',
-	'src/sp_shambler.c',
-	'src/sp_soldier.c',
-	'src/sp_tarbaby.c',
-	'src/sp_wizard.c',
-	'src/sp_zombie.c',
 	'src/stats.c',
 	'src/stats_json.c',
 	'src/stats_xml.c',
@@ -104,7 +61,7 @@ ktx_sources = [
 
 library('qwprogs', ktx_sources,
 	include_directories : include_directories('include'),
-	c_args : '-DBOT_SUPPORT=1',
+#	c_args : '-DBOT_SUPPORT=1',
 	dependencies : [
 		meson.get_compiler('c').find_library('m', required : false)
 	],
